add controllers to swagger
